# exo2ml

./: .gitignore  pyproject.toml
exercices/: p1_c3_corrige.ipynb  p1_c4_corrige.ipynb  p1_c4_enonce.ipynb
screenshots/: p1_c2.py
